# pp_trees

./: .gitignore  CMakeLists.txt  Instructions.txt  README.md
Avl/: ignore.gitignore  in1.txt  in2.txt  in3.txt  in4.txt  main  main.c  out1.txt  out2.txt  out4.txt  pp_avl_node.c  pp_avl_node.h  pp_avl_tree.c  pp_avl_tree.h  utils.c  utils.h
avl/: CMakeLists.txt
avl/include/avl/: pp_avl_node.h  pp_avl_tree.h
avl/include/pp_avl/: pp_avl_node.h  pp_avl_tree.h
avl/src/: pp_avl_node.c  pp_avl_tree.c
data/: out1.txt  out2.txt  out4.txt
lazy_segment/: CMakeLists.txt
lazy_segment/include/lazy_segment/: pp_segment_node.h
lazy_segment/src/: pp_segment_node.c
main/: CMakeLists.txt
main/data/: in1.txt  in2.txt  in4.txt
main/include/main/: tests.h  utils.h
main/src/: main.c  tests.c  utils.c
